--- a/assignment5-w0401354-Hanna Chen/hcc_schedule.html
+++ b/assignment5-w0401354-Hanna Chen/hcc_schedule.html
@@ -26,7 +26,7 @@
  <img src="banner.png" alt="Hamilton Conference Center" id="bannerlogo"/>
 </header>
 <section id="leftcol">
-	  <section id="sidelinks">	
+	  <div id="sidelinks">	
 		  <h1>HCC Links:</h1> 
 		  <nav>
 			 <ul>
@@ -42,11 +42,7 @@
 			 </ul>
 		  </nav>
 	  </section>
-	  <aside id="leftsection">
-         <h1>About Reservations:</h1>
-         <p>Reservations should be made at least<strong> 48</strong> hours in advance. Cancellations require <strong>24</strong> hour notice. Room deposits will
-            not be returned for cancellations within 24 hours of the scheduled event.</p>
-	  </aside>
+	
 </section>
 
 <section id="rightcol">
@@ -198,7 +194,6 @@
 	   </tfoot>
 	   </table>
 	   
-
 	  <aside>
 		  <h2>Room Descriptions</h2>
           <div class="row">
@@ -229,9 +224,11 @@
           </div>
       </aside>     
 	  
-	  <aside>
-	      <p><b>To reserve a room</b>, please contact <i>Yancy Inwe</i> at extension 388 or by e-mail:<a href="mailto:yancyinwe@hconfcenter.org">yancyinwe@hconfcenter.org</a></p>
-	  </aside>
+	  <aside id="rightsection">
+         <h1>About Reservations:</h1>
+         <p>Reservations should be made at least<strong> 48</strong> hours in advance. Cancellations require <strong>24</strong> hour notice. Room deposits will not be returned for cancellations within 24 hours of the scheduled event.
+		 <b> To reserve a room</b>, please contact <i>Yancy Inwe</i> at extension 388 or by e-mail:<a href="mailto:yancyinwe@hconfcenter.org">yancyinwe@hconfcenter.org</a></p>
+	 </aside>
     
 </section>
 <footer>
